<resources>
    <string name="app_name">Famous Computer Scientists</string>
    <string name="CharlesBabbage">CharlesBabbage</string>
    <string name="charlesbabbage">Charles Babbage</string>
    <string name="cbbor">1791.-1871.</string>
    <string name="GeorgeBoole">GeorgeBoole</string>
    <string name="georgeboole">George Boole</string>
    <string name="gbbor">1815.-1864.</string>
    <string name="AlanTuring">AlanTuring</string>
    <string name="alanturing">Alan Turing</string>
    <string name="atbor">1912.-1954</string>
    <string name="buttonone">ABOUT BABBAGE</string>
    <string name="buttontwo">ABOUT BOOLE</string>
    <string name="buttonthree">ABOUT TURING</string>
    <string name="cbquote">`A tool is usually more simple than a machine it is generally used with the hand, whilst a
        machine is frequently moved by animal or steam power.´
    </string>
    <string name="gbquote">`No matter how correct a mathematical theorem may appear to be, one ought never to be
        satisfied that there was not something imperfect about it until it also gives the impression of being
        beautiful.´
    </string>
    <string name="atquote">`Those who can imagine anything, can create the impossible.´</string>
    <string name="cbtxt">"Charles Babbage was an English polymath. A mathematician, philosopher, inventor and mechanical engineer, Babbage originated the concept of a digital programmable computer. Considered by some to be a `father of the computer´, Babbage is credited with inventing the first mechanical computer that eventually led to more complex electronic designs, though all the essential ideas of modern computers are to be found in Babbage's analytical engine. His varied work in other fields has led him to be described as `pre-eminent´ among the many polymaths of his century. Babbage's machines were among the first mechanical computers." </string>
    <string name="gbtxt">"George Boole was a largely self-taught English mathematician, philosopher and logician, most of whose short career was spent as the first professor of mathematics at Queen's College, Cork in Ireland. He worked in the fields of differential equations and algebraic logic, and is best known as the author of The Laws of Thought (1854) which contains Boolean algebra. Boolean logic is credited with laying the foundations for the information age. Boolean algebra is named after him, as is the crater Boole on the Moon. The keyword Bool represents a Boolean datatype in many programming languages, though Pascal and Java, among others, both use the full name Boolean."</string>
    <string name="attxt">"Alan Mathison Turing OBE FRS was an English mathematician, computer scientist, logician, cryptanalyst, philosopher and theoretical biologist. Turing was highly influential in the development of theoretical computer science, providing a formalisation of the concepts of algorithm and computation with the Turing machine, which can be considered a model of a general-purpose computer. Turing is widely considered to be the father of theoretical computer science and artificial intelligence."</string>
</resources>
