<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@drawable/background2"
>


    <ImageButton
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cb"
            android:contentDescription="@string/CharlesBabbage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:adjustViewBounds="false"
    />
    <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charlesbabbage"
            android:textColor="#000000"
            app:layout_constraintTop_toTopOf="@id/image"
            app:layout_constraintStart_toEndOf="@id/image"
            app:layout_constraintLeft_toRightOf="@id/image"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:textSize="30sp"
            android:textStyle="bold"
    />
    <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbbor"
            app:layout_constraintTop_toBottomOf="@id/text"
            app:layout_constraintStart_toEndOf="@id/image"
            app:layout_constraintLeft_toRightOf="@id/image"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/image"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintVertical_bias="0.0"/>



    <ImageButton
            android:id="@+id/image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gb"
            android:contentDescription="@string/GeorgeBoole"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/georgeboole"
            android:textColor="#000000"
            app:layout_constraintTop_toTopOf="@id/image2"
            app:layout_constraintStart_toEndOf="@id/image2"
            app:layout_constraintLeft_toRightOf="@id/image2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:textSize="30sp"
            android:textStyle="bold"
    />
    <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gbbor"
            app:layout_constraintTop_toBottomOf="@id/text3"
            app:layout_constraintStart_toEndOf="@id/image2"
            app:layout_constraintLeft_toRightOf="@id/image2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/image2"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintVertical_bias="0.0"/>



    <ImageButton
            android:id="@+id/image3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/at"
            android:contentDescription="@string/AlanTuring"
            app:layout_constraintTop_toBottomOf="@id/image2"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alanturing"
            android:textColor="#000000"
            app:layout_constraintTop_toTopOf="@id/image3"
            app:layout_constraintStart_toEndOf="@id/image3"
            app:layout_constraintLeft_toRightOf="@id/image3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:textSize="30sp"
            android:textStyle="bold"
    />
    <TextView
            android:id="@+id/text6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atbor"
            app:layout_constraintTop_toBottomOf="@id/text5"
            app:layout_constraintStart_toEndOf="@id/image3"
            app:layout_constraintLeft_toRightOf="@id/image3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/image3"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:id="@+id/button"
            android:text="@string/buttonone"
            android:layout_width="140dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="@id/image"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/text2"
            app:layout_constraintTop_toBottomOf="@id/text"
            app:layout_constraintHorizontal_bias="1.0"
            android:background="@drawable/button_background"

    />


    <Button
            android:id="@+id/button2"
            android:text="@string/buttontwo"
            android:layout_width="140dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="@id/image2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/text4"
            app:layout_constraintTop_toBottomOf="@id/text3"
            app:layout_constraintHorizontal_bias="1.0"
            android:background="@drawable/button_background"

    />


    <Button
            android:id="@+id/button3"
            android:text="@string/buttonthree"
            android:layout_width="140dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="@id/image3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/text6"
            app:layout_constraintTop_toBottomOf="@id/text5"
            app:layout_constraintHorizontal_bias="1.0"
            android:background="@drawable/button_background"
            android:textSize="14sp"/>



</androidx.constraintlayout.widget.ConstraintLayout>